--- a/emailscore/src/main/resources/static/index.html
+++ b/emailscore/src/main/resources/static/index.html
@@ -26,4 +26,10 @@
 
   <h1>REST-API für Abfrage SPAM-Score von Email-Adressen</h1>
 
+  <h2>Beispiel Aufrufe für gültige Email-Adressen:</h2>
+  <ul>
+    <li><a href="api/v1/emailSpamScore?email_adresse=hans@wiwi.de">hans@wiwi.de</a></li>
+    <li><a href="api/v1/emailSpamScore?email_adresse=nina@info.de">nina@info.com</a></li>
+  </ul>
+
 </body>
