Wording in Tabelle zur Erklaerung Spam-Score-Wert in drei Dateien vereinheitlicht

--- a/frontend/src/main/resources/static/email-checker.html
+++ b/frontend/src/main/resources/static/email-checker.html
@@ -41,7 +41,7 @@
       </tr>
       <tr>
         <td>3</td>
-        <td>Viele Fälle für Verwendung der Email-Adresse zum Spam bekannt.</td>
+        <td>Viele Fälle für Verwendung der Email-Adresse zum Spamming bekannt.</td>
       </tr>
     </tbody>
   </table>
