--- a/frontend/src/main/resources/static/email-checker.html
+++ b/frontend/src/main/resources/static/email-checker.html
@@ -23,7 +23,7 @@
     <thead>
       <tr>
         <th>Spam-Score</th>
-        <th>Beschreibung</th>
+        <th>Bedeutung</th>
       </tr>
     </thead>
     <tbody>
