spamscore: index.html verbessert

--- a/2_spamscore/src/main/resources/static/index.html
+++ b/2_spamscore/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>REST-API für Abfrage SPAM-Score von Email-Adressen</title>
+    <title>REST-API für Abfrage Spam-Score von Email-Adressen</title>
     <meta charset="utf-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-  <h1>REST-API für Abfrage SPAM-Score von Email-Adressen</h1>
+  <h1>REST-API für Abfrage Spam-Score von Email-Adressen</h1>
 
   <h2>Beispiel-Aufrufe für gültige Email-Adressen:</h2>
   <ul>
@@ -35,8 +35,8 @@
   <h2>Beispiel-Aufrufe für ungültige Email-Adressen:</h2>
   <ul>
     <li><a href="api/v1/emailSpamScore?email_adresse=hanswiwi.de" >hanswiwi.de (kein "@")</a></li>
-    <li><a href="api/v1/emailSpamScore?email_adresse=nina@info"   >nina@info (keine Top-Devel-Domain)</a></li>
-    <li><a href="api/v1/emailSpamScore?email_adresse=@wiwi.de"    >@wiwi.de (kein Nutzername vor "@")</a></li>
+    <li><a href="api/v1/emailSpamScore?email_adresse=nina@info"   >nina@info   (keine Top-Devel-Domain)</a></li>
+    <li><a href="api/v1/emailSpamScore?email_adresse=@wiwi.de"    >@wiwi.de    (kein Nutzername vor "@")</a></li>
   </ul>
 
 </body>
