Spam-Score Index: in static/index.html  zwei Actuator-Endpunkte dazu

--- a/2_spamscore/src/main/resources/static/index.html
+++ b/2_spamscore/src/main/resources/static/index.html
@@ -39,4 +39,10 @@
     <li><a href="api/v1/emailSpamScore?email_adresse=@wiwi.de"    >@wiwi.de    (kein Nutzername vor "@")</a></li>
   </ul>
 
+  <h2>Aufrufe für Actuator-Endpunkte</h2>
+  <ul>
+    <li><a href="actuator/health" >Actuator /health</a></li>
+    <li><a href="actuator/info"   >Actuator /info</a></li>
+  </ul>
+
 </body>
